--- a/app/src/main/res/layout/bottom_navigation_layout.xml
+++ b/app/src/main/res/layout/bottom_navigation_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/navigation_view_margin"
+        android:layout_marginTop="@dimen/navigation_view_margin"
+        android:layout_marginEnd="@dimen/navigation_view_margin"
         app:menu="@menu/menu_bottom_navigation" />
 </FrameLayout>
