--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,12 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="color_gray">#66000000</color>
+    <color name="light_gray">#33000000</color>
+
+    <color name="red">#AE0B0B</color>
+    <color name="green">#66EF12</color>
+    <color name="blue">#10B0F4</color>
+    <color name="light_red">#EC5656</color>
+    <color name="light_green">#BDFF95</color>
+    <color name="light_blue">#76CBEF</color>
 </resources>
