--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -23,7 +23,7 @@
             android:textSize="30sp"/>
 
         <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipGroup"
+            android:id="@+id/chipGroupTheme"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
