--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,7 +33,7 @@
         <item name="mySecondColor">@color/light_green</item>
     </style>
 
-    <style name="myChipStyle" parent="Widget.MaterialComponents.Chip.Action">
+    <style name="myChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
         <item name="android:fontFamily">@font/astro</item>
         <item name="chipStrokeColor">@color/light_gray</item>
         <item name="android:windowBackground">@color/light_gray</item>
