--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -31,6 +31,7 @@
             app:singleSelection="true">
 
         <com.google.android.material.chip.Chip
+            android:id="@+id/chipMars"
             style="@style/myChipStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -40,6 +41,7 @@
             android:textAlignment="center"/>
 
         <com.google.android.material.chip.Chip
+            android:id="@+id/chipSky"
             style="@style/myChipStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,6 +51,7 @@
             android:textAlignment="center"/>
 
         <com.google.android.material.chip.Chip
+            android:id="@+id/chipEarth"
             style="@style/myChipStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
