--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -17,48 +17,45 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/astro"
             android:gravity="center_horizontal"
             android:text="CHOOSE THEME"
-            android:fontFamily="@font/astro"
-            android:textSize="30sp"/>
+            android:textSize="30sp" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chipGroupTheme"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_margin="16dp"
+            android:orientation="vertical"
             app:singleSelection="true">
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipMars"
-            style="@style/myChipStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="MARS"
-            app:rippleColor="@color/red"
-            android:backgroundTint="@color/light_red"
-            android:textAlignment="center"/>
+            <com.google.android.material.chip.Chip
+                style="@style/myChipStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_red"
+                android:text="MARS"
+                android:textAlignment="center"
+                app:rippleColor="@color/red" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipSky"
-            style="@style/myChipStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SKY"
-            android:backgroundTint="@color/light_blue"
-            app:rippleColor="@color/blue"
-            android:textAlignment="center"/>
+            <com.google.android.material.chip.Chip
+                style="@style/myChipStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_blue"
+                android:text="SKY"
+                android:textAlignment="center"
+                app:rippleColor="@color/blue" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipEarth"
-            style="@style/myChipStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="EARTH"
-            android:backgroundTint="@color/light_green"
-            app:rippleColor="@color/green"
-            android:textAlignment="center"/>
+            <com.google.android.material.chip.Chip
+                style="@style/myChipStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_green"
+                android:text="EARTH"
+                android:textAlignment="center"
+                app:rippleColor="@color/green" />
 
         </com.google.android.material.chip.ChipGroup>
 
