lesson3: added ViewPagerAdapter

--- a/app/src/main/res/layout/fragment_system.xml
+++ b/app/src/main/res/layout/fragment_system.xml
@@ -6,6 +6,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/solarSystem" />
+        app:srcCompat="@drawable/system" />
 
 </FrameLayout>
