--- a/app/src/main/res/layout/fragment_constraintlayout.xml
+++ b/app/src/main/res/layout/fragment_constraintlayout.xml
@@ -21,21 +21,20 @@
         android:text="2"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toEndOf="@id/guideline_vertical1"
-        app:layout_constraintWidth_percent="0.2"
-        app:layout_constraintTop_toBottomOf="@id/barrier1"/>
+        app:layout_constraintTop_toBottomOf="@id/barrier1"
+        app:layout_constraintWidth_percent="0.2" />
 
     <Button
         android:id="@+id/button_three"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="3"
-        app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintWidth_percent="0.2"
         app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal1"
         app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toEndOf="@+id/guideline_vertical2"
-        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal1"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal1"
+        app:layout_constraintWidth_percent="0.2" />
 
 
     <Button
@@ -43,9 +42,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="4"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintWidth_percent="0.2" />
 
     <Button
@@ -53,9 +52,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="5"
+        app:layout_constraintBottom_toTopOf="@id/barrier2"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toEndOf="@id/guideline_vertical1"
-        app:layout_constraintBottom_toTopOf="@id/barrier2"
         app:layout_constraintWidth_percent="0.2" />
 
     <Button
@@ -63,9 +62,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="6"
-        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal2"
         app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toEndOf="@+id/guideline_vertical2"
         app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal2"
         app:layout_constraintWidth_percent="0.2" />
@@ -74,13 +73,13 @@
         android:id="@+id/group1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids = "button_one,button_three"/>
+        app:constraint_referenced_ids="button_one,button_three" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids = "button_four,button_six"/>
+        app:constraint_referenced_ids="button_four,button_six" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier1"
@@ -101,14 +100,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25"/>
+        app:layout_constraintGuide_percent="0.25" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_horizontal2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.75"/>
+        app:layout_constraintGuide_percent="0.75" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical1"
@@ -122,7 +121,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.75"/>
+        app:layout_constraintGuide_percent="0.75" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
