--- a/app/src/main/res/layout/fragment_transition.xml
+++ b/app/src/main/res/layout/fragment_transition.xml
@@ -6,17 +6,25 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/text_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Small" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Animate" />
+        android:text="Animate"
+        android:textSize="15sp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text"
+        android:id="@+id/text_bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Transitions example"
+        android:text="Big"
         android:visibility="gone" />
 </LinearLayout>
