--- a/app/src/main/res/layout/fragment_system.xml
+++ b/app/src/main/res/layout/fragment_system.xml
@@ -1,11 +1,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/transitionsContainer">
 
     <ImageView
+        android:id="@+id/imageViewSystem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerInside"
         app:srcCompat="@drawable/system" />
     <LinearLayout
         android:layout_width="wrap_content"
