--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="none">
         <item
+            android:id="@+id/recycler"
+            android:icon="@android:drawable/ic_menu_sort_by_size"
+            android:title="RecyclerView" />
+        <item
             android:id="@+id/navigation_one"
             android:icon="@drawable/ic_archive"
             android:title="Api" />
