--- a/app/src/main/res/layout/activity_recycler_item_header.xml
+++ b/app/src/main/res/layout/activity_recycler_item_header.xml
@@ -4,28 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/marsImageView"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bg_mars" />
-
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mars"
+        android:padding="15dp"
+        android:text="Title"
+        android:textColor="@color/design_default_color_error"
         android:textSize="35sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/marsImageView"
-        app:layout_constraintStart_toEndOf="@+id/marsImageView"
-        app:layout_constraintTop_toTopOf="@+id/marsImageView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="#000"
-        app:layout_constraintBottom_toBottomOf="@+id/marsImageView"
+        app:layout_constraintBottom_toBottomOf="@+id/header"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
