lesson6: add buttons for move items up and down

--- a/app/src/main/res/layout/activity_recycler_item_mars.xml
+++ b/app/src/main/res/layout/activity_recycler_item_mars.xml
@@ -13,6 +13,7 @@
         app:srcCompat="@drawable/bg_mars" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/marsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mars"
@@ -28,9 +29,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:background="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
+        app:layout_constraintBottom_toBottomOf="@+id/marsTextView"
+        app:layout_constraintEnd_toStartOf="@+id/moveItemUp"
+        app:layout_constraintStart_toEndOf="@+id/marsTextView"
+        app:layout_constraintTop_toTopOf="@+id/marsTextView"
         app:srcCompat="@drawable/ic_plus_fab" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -38,9 +40,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/marsTextView"
+        app:layout_constraintEnd_toStartOf="@+id/moveItemUp"
+        app:layout_constraintStart_toEndOf="@+id/addItemImageView"
+        app:layout_constraintTop_toTopOf="@+id/marsTextView"
+        app:srcCompat="@android:drawable/ic_delete" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/moveItemUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:tint="@color/design_default_color_error"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:srcCompat="@android:drawable/arrow_up_float" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/moveItemDown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:tint="@color/design_default_color_error"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/ic_archive" />
+
+        app:srcCompat="@android:drawable/arrow_down_float" />
 
 
     <View
