--- a/app/src/main/res/layout/activity_recycler_item_header.xml
+++ b/app/src/main/res/layout/activity_recycler_item_header.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:text="Title"
+        android:text="@string/title"
         android:textColor="@color/design_default_color_error"
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
