--- a/app/src/main/res/layout/activity_recycler_item_mars.xml
+++ b/app/src/main/res/layout/activity_recycler_item_mars.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/marsImageView"
@@ -16,7 +17,7 @@
         android:id="@+id/marsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mars"
+        android:text="@string/mars"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/marsImageView"
@@ -67,6 +68,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:srcCompat="@android:drawable/arrow_down_float" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/marsDescriptionTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="@string/mars_description"
+        android:textColor="#000"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/marsImageView"
+        tools:visibility="visible" />
 
 
     <View
