--- a/app/src/main/res/layout/fragment_coordinatorlayout.xml
+++ b/app/src/main/res/layout/fragment_coordinatorlayout.xml
@@ -45,6 +45,7 @@
         app:layout_behavior=".view.layouts.NestedBehavior">
 
         <TextView
+            android:id="@+id/coordTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/large_text" />
