--- a/app/src/main/res/layout/fragment_coordinatorlayout.xml
+++ b/app/src/main/res/layout/fragment_coordinatorlayout.xml
@@ -48,7 +48,7 @@
             android:id="@+id/coordTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/large_text" />
+            android:text="t" />
 
     </androidx.core.widget.NestedScrollView>
 
