--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -47,5 +47,10 @@
         <item name="android:textColor">#FF6D00</item>
     </style>
 
+    <style name="MyThemeSplash" parent="MyBaseTheme">
+        <item name="myMainColor">@color/purple_500</item>
+        <item name="mySecondColor">@color/purple_200</item>
+        <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
 
 </resources>
