--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -24,11 +24,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:fontFamily="@font/merienda"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:text="title"
-        android:fontFamily="@font/merienda"
-        android:textColor="#FA7070"
+        android:textColor="@color/textDarkPrimary"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:text="explanation"
-        android:textColor="#000"
+        android:textColor="@color/textDarkSecondary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_description_header" />
