--- a/app/src/main/res/layout/fragment_ux_buttons.xml
+++ b/app/src/main/res/layout/fragment_ux_buttons.xml
@@ -10,21 +10,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorAccent"
-        android:text="Main button"
+        android:text="@string/main_button_text"
         android:textSize="30sp" />
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
-        android:text="second button"
+        android:text="@string/second_button_text"
         android:textSize="23sp" />
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/color_gray"
-        android:text="additional button" />
+        android:text="@string/additional_button_text" />
 
 
     <View
@@ -37,21 +37,21 @@
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OutlinedButton"
+   android:text="@string/main_button_text"
         android:textSize="25sp" />
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OutlinedButton"
+        android:text="@string/second_button_text"
         android:textSize="25sp" />
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OutlinedButton"
+        android:text="@string/additional_button_text"
         android:textSize="25sp" />
 
     <View
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:backgroundTint="#8CE394"
-            android:text="OutlinedButton"
+            android:text="@string/main_button_text"
             android:textSize="25sp" />
 
         <com.google.android.material.button.MaterialButton
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="OutlinedButton"
+            android:text="@string/second_button_text"
             android:textColor="@color/white"
             android:textSize="25sp" />
 
@@ -88,7 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="OutlinedButton"
+            android:text="@string/additional_button_text"
             android:textColor="@color/white"
             android:textSize="25sp" />
     </LinearLayout>
